--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
-    "multer": "^1.4.5-lts.2",
+    "multer": "^1.4.3",
     "socket.io": "^4.8.1"
   }
 }
